--- a/package.json
+++ b/package.json
@@ -6,5 +6,11 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.1"
+  },
+  "engines": {
+    "node": "22.x"
+  },
+  "scripts": {
+      "start": "node server.js"
   }
 }
